bug: chars in cards shoud scale proportionally  on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
 #deck > * {
     border-style: solid;
     border-color: black;
-    font-size: 14vw;
+    font-size: 380%;
     width: 80px;
     height: 80px;
 }
